# shellverless

./: .gitignore  Cargo.toml  LICENSE  README.md  bootstrap  build.sh
src/: main.rs  server.rs
