[package]
name = "httshell"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "httshell-client"
path = "src/bin/client.rs"

[[bin]]
name = "httshell-server"
path = "src/bin/server.rs"

[dependencies]
# Shared dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["process", "io-util", "macros", "rt-multi-thread", "time"] }

# Server-specific dependencies
lambda_http = { version = "0.6", optional = true }
urlencoding = { version = "2.1", optional = true }
uuid = { version = "1.3", features = ["v4"], optional = true }
lazy_static = { version = "1.4", optional = true }
chrono = { version = "0.4", optional = true }

# Client-specific dependencies
reqwest = { version = "0.11", features = ["json"], optional = true }
rustyline = { version = "12.0", features = ["with-file-history"], optional = true }
colored = { version = "2.0", optional = true }
dirs = { version = "5.0", optional = true }

[features]
default = ["client"]
client = ["reqwest", "rustyline", "colored", "dirs", "uuid"]
server = ["lambda_http", "urlencoding", "uuid", "lazy_static", "chrono"]

[profile.release]
opt-level = "z" 
strip = true
lto = true
panic = "abort"
